extensions, and hides some of the messy plumbing needed to get Python to
talk to the WMI API. It's pure Python and should work with any version of
Python from 2.1 onwards (list comprehensions) and any recent version of 
pywin32.


Where do I get it?
==================

http://timgolden.me.uk/python/wmi.html


What's Changed?
===============

29th Nov 2005 1.0rc3 . Small changes to allow array of output parameters
                     . Added qualifiers to list of private attributes
                     . Added details of required privs to method docstring
                     . Fixed long-standing bug in Usage example
                     . Added provenance to WMI methods from MappingStrings
26th Oct 2005 1.0rc2 . Corrected __repr__ in _wmi_namespace
18th Oct 2005 1.0rc1 . Refactored into namespace, class, object classes.
                     . This makes it easier to use certain things, such
                       as the StdRegProv's registry object, and the XP
                       SystemRestore functionality.
                     . Added CompareTo_ to support __eq__ functionality.
                     . Added username/password support to WMI connection.
                       Saves having to do separate connect_server call.
                     . Added optional debug flag to WMI connection.
                     . Switched to MIT license
                     . Bumped version to 1.0
25th May 2005 0.6b   . Removed late-dispatch code (EnsureDispatch)
                       and replaced with dynamic dispatch, using
                       Thomas Heller's ProvideConstants class to
                       avoid hard-coding WMI constants. This is
                       to help people using py2exe who would
                       otherwise need to specify one or more
                       typelibs.
19th May 2004 0.6    . Added namespace support to wmi.__init__.
                       This means you can now do, eg: